add jsr305 as direct dependency to simplify Nullable usage (for nullable guice injections); fix jakarta api usages